--- a/.github/workflows/sca.yml
+++ b/.github/workflows/sca.yml
@@ -93,3 +93,6 @@ jobs:
           -Dsonar.sources=.
           -Dsonar.sourceEncoding=UTF-8
           -Dsonar.java.binaries=decibelio/target/classes
+          -Dsonar.c.file.suffixes=-
+          -Dsonar.cpp.file.suffixes=-
+          -Dsonar.objc.file.suffixes=-
