--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,25 +1,74 @@
-name: Build and Deploy Decibelio
+name: 50 DAST Scan Docker Image
 
 on:
-  push:
-    branches:
-      - main
+  workflow_dispatch:
+    inputs:
+      image-tag:
+        type: string
+        description: 'The name of the docker image to scan'
+        required: true
+
+  workflow_call:
+    inputs:
+      image-tag:
+        type: string
+        description: 'The name of the docker image to scan'
+        required: true
 
 env:
+  # used for docker
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
+  IMAGE_TAG: ${{ github.event.inputs['image-tag'] }}  # Simplified for correct input retrieval
 
 jobs:
-  build-and-deploy:
+  dast-scan:
+    name: DAST Scan
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
-
     steps:
-      # Clona el repositorio
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      - name: Log in to the Container registry
+        uses: docker/login-action@v2.1.0
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Install docker-compose
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y docker-compose
+
+      - name: Start demo app container
+        run: docker rm demoApp || true && docker run -d -p 8080:8080 --name demoApp ${{ env.IMAGE_TAG }}
+
+      - name: Wait for container to start
+        run: timeout 300 bash -c 'while [[ "$(curl -s -o /dev/null -w ''%{http_code}'' localhost:8080)" != "200" ]]; do sleep 5; done' || false
+
+      - name: Test container
+        run: curl -s localhost:8080/echo?msg=Hello%20World!
+
+      - name: ZAP Full Scan
+        uses: zaproxy/action-full-scan@v0.11.0
+        with:
+          docker_name: 'owasp/zap2docker-stable'
+          token: ${{ secrets.GITHUB_TOKEN }}
+          target: 'http://localhost:8080'
+          cmd_options: '-a -j -l WARN -z "-addoninstallall"'
+          allow_issue_writing: false
+
+      # - name: Upload HTML report
+      #   uses: actions/upload-artifact@v3
+      - name: Upload HTML report
+        uses: actions/upload-artifact@v4
+        with:
+          name: DAST_Report.html
+          path: report_html.html
+
+      - name: Stop and clean up Docker container
+        if: always()
+        run: |
+          docker stop demoApp && docker rm demoApp
+          docker container prune --force
+          docker image prune --force
 
       # Cambia al directorio "decibelio" y construye la aplicación con Maven
       - name: Build Decibelio with Maven
