--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,93 +1,65 @@
-name: 50 DAST Scan Docker Image
+name: 06 Build Docker Image with Docker Compose
 
 on:
-  workflow_dispatch:
-    inputs:
-      image-tag:
-        type: string
-        description: 'The name of the docker image to scan'
-        required: true
-
-  workflow_call:
-    inputs:
-      image-tag:
-        type: string
-        description: 'The name of the docker image to scan'
-        required: true
+    workflow_dispatch:
+    workflow_call:
+        outputs:
+            image-tag:
+                description: "The tag of my image test"
+                value: ${{ jobs.docker.outputs.image-tag }}
 
 env:
-  # used for docker
-  REGISTRY: ghcr.io
-  IMAGE_TAG: ${{ github.event.inputs['image-tag'] }}  # Simplified for correct input retrieval
+    REGISTRY: ghcr.io
+    IMAGE_NAME: ${{ github.repository }}
 
 jobs:
-  dast-scan:
-    name: DAST Scan
-    runs-on: ubuntu-latest
-    steps:
-      - name: Log in to the Container registry
-        uses: docker/login-action@v2.1.0
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Install docker-compose
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y docker-compose
-
-      - name: Start demo app container
-        run: docker rm demoApp || true && docker run -d -p 8080:8080 --name demoApp ${{ env.IMAGE_TAG }}
-
-      - name: Wait for container to start
-        run: timeout 300 bash -c 'while [[ "$(curl -s -o /dev/null -w ''%{http_code}'' localhost:8080)" != "200" ]]; do sleep 5; done' || false
-
-      - name: Test container
-        run: curl -s localhost:8080/echo?msg=Hello%20World!
-
-      - name: ZAP Full Scan
-        uses: zaproxy/action-full-scan@v0.11.0
-        with:
-          docker_name: 'owasp/zap2docker-stable'
-          token: ${{ secrets.GITHUB_TOKEN }}
-          target: 'http://localhost:8080'
-          cmd_options: '-a -j -l WARN -z "-addoninstallall"'
-          allow_issue_writing: false
-
-      # - name: Upload HTML report
-      #   uses: actions/upload-artifact@v3
-      - name: Upload HTML report
-        uses: actions/upload-artifact@v4
-        with:
-          name: DAST_Report.html
-          path: report_html.html
-
-      - name: Stop and clean up Docker container
-        if: always()
-        run: |
-          docker stop demoApp && docker rm demoApp
-          docker container prune --force
-          docker image prune --force
-
-      # Cambia al directorio "decibelio" y construye la aplicación con Maven
-      - name: Build Decibelio with Maven
-        run: |
-          cd decibelio
-          ./mvnw clean package
-
-      # Levanta servicios en la carpeta "decibelio" usando docker-compose
-      - name: Start services in decibelio
-        env:
-          POSTGRES_VERSION: ${{ secrets.POSTGRES_VERSION }}
-          DB_PORT_PUBLIC: ${{ secrets.DB_PORT_PUBLIC }}
-          LOCAL_DATA_DIR_BD: ${{ secrets.LOCAL_DATA_DIR_BD }}
-        run: |
-          cd decibelio
-          docker-compose -f docker-compose.yml up -d
-
-      # Cambia a la carpeta "decibelio-deploy" y construye/despliega
-      - name: Deploy Decibelio in production
-        run: |
-          cd decibelio-deploy
-          sudo docker-compose --env-file .env -f docker-compose.yml up --build -d
+    docker:
+        outputs:
+            image-tag: ${{ steps.meta.outputs.tags }}
+        runs-on: ubuntu-latest
+        permissions:
+            contents: read
+            packages: write
+        
+        steps:
+        - uses: actions/checkout@v3
+        - name: Download application binary
+          uses: actions/download-artifact@v3.0.0
+          with:
+            name: Application-Binary
+            path: target
+        - name: Log in to the Container registry
+          uses: docker/login-action@v2.1.0
+          with:
+            registry: ${{ env.REGISTRY }}
+            username: ${{ github.actor }}
+            password: ${{ secrets.GITHUB_TOKEN }}
+        - name: Extract metadata (tags, labels) for Docker
+          id: meta
+          uses: docker/metadata-action@v4.1.0
+          with:
+            images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+            tags: |
+              type=semver,pattern={{version}}
+              type=semver,pattern={{major}}.{{minor}}
+              type=semver,pattern={{major}}
+              type=ref,event=pr
+              type=ref,event=tag
+              type=ref,event=branch
+              type=schedule,pattern=main
+        - name: Build Decibelio with Maven
+          run: |
+            cd decibelio
+            ./mvnw clean package
+        - name: Start services in decibelio with Docker Compose
+          env:
+            POSTGRES_VERSION: ${{ secrets.POSTGRES_VERSION }}
+            DB_PORT_PUBLIC: ${{ secrets.DB_PORT_PUBLIC }}
+            LOCAL_DATA_DIR_BD: ${{ secrets.LOCAL_DATA_DIR_BD }}
+          run: |
+            cd decibelio
+            docker-compose -f docker-compose.yml up -d
+        - name: Deploy Decibelio in production
+          run: |
+            cd decibelio-deploy
+            sudo docker-compose --env-file .env -f docker-compose.yml up --build -d
