--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,4 +1,4 @@
-name: 06 Build Docker Image with Docker Compose
+name: Build and Deploy with Docker Compose
 
 on:
     workflow_dispatch:
@@ -10,7 +10,7 @@ on:
 
 env:
     REGISTRY: ghcr.io
-    IMAGE_NAME: ${{ github.repository }}
+    IMAGE_NAME: ${ { github.repository }}
 
 jobs:
     docker:
@@ -20,7 +20,7 @@ jobs:
         permissions:
             contents: read
             packages: write
-        
+
         steps:
         - uses: actions/checkout@v3
         - name: Download application binary
@@ -51,19 +51,16 @@ jobs:
           run: |
             sudo apt-get update
             sudo apt-get install -y docker-compose
-        - name: Build Decibelio with Maven
-          run: |
-            cd decibelio
-            ./mvnw clean package
-        - name: Start services in decibelio with Docker Compose
+        - name: Build and start services with Docker Compose
           env:
             POSTGRES_VERSION: ${{ secrets.POSTGRES_VERSION }}
             DB_PORT_PUBLIC: ${{ secrets.DB_PORT_PUBLIC }}
             LOCAL_DATA_DIR_BD: ${{ secrets.LOCAL_DATA_DIR_BD }}
           run: |
             cd decibelio
-            docker-compose -f docker-compose.yml up -d
+            docker-compose -f docker-compose.yml up -d --build
         - name: Deploy Decibelio in production
           run: |
             cd decibelio-deploy
             sudo docker-compose --env-file .env -f docker-compose.yml up --build -d
+            
