--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -58,7 +58,7 @@ jobs:
             LOCAL_DATA_DIR_BD: ${{ secrets.LOCAL_DATA_DIR_BD }}
           run: |
             cd decibelio
-            ./mvnw liberty:dev 
+            ./mvnw clean install
             docker-compose -f docker-compose.yml up -d --build
         - name: Deploy Decibelio in production
           env:
