--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -39,7 +39,6 @@ jobs:
           uses: docker/metadata-action@v4.1.0
           with:
             images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-            # make sure scheduled also uses main as tag label of the image (default is nightly which will fail in containerscanner) EVENT=BRANCH and SCHEDULE MUST BE LAST to work
             tags: |
               type=semver,pattern={{version}}
               type=semver,pattern={{major}}.{{minor}}
@@ -48,11 +47,16 @@ jobs:
               type=ref,event=tag
               type=ref,event=branch
               type=schedule,pattern=main
+        - name: Build project
+          run: |
+            cd decibelio
+            ./mvnw clean install
+            ./mvnw liberty:package
         - name: Build and push Docker image
           uses: docker/build-push-action@v3.2.0
           with:
             context: ./decibelio
-            dockerfile: Dockerfile
+            dockerfile: ./decibelio/Dockerfile
             push: true
             tags: ${{ steps.meta.outputs.tags }}
             labels: ${{ steps.meta.outputs.labels }}
