--- a/.github/workflows/dast.yml
+++ b/.github/workflows/dast.yml
@@ -32,16 +32,16 @@ jobs:
 
       - name: Validate IMAGE_TAG input
         run: |
-          if [ -z "${{ github.event.inputs.image-tag }}" ]; then
+          if [ -z "${{ inputs.image-tag }}" ]; then
             echo "Error: IMAGE_TAG input is empty."
             exit 1
           fi
-          echo "IMAGE_TAG=${{ github.event.inputs.image-tag }}" >> $GITHUB_ENV
+          echo "IMAGE_TAG=${{ inputs.image-tag }}" >> $GITHUB_ENV
 
       - name: Start demo app container
         run: |
           docker rm demoApp || true
-          docker run -d -p 8080:8080 --name demoApp ${{ env.REGISTRY }}/${{ github.event.inputs.image-tag }}
+          docker run -d -p 8080:8080 --name demoApp ${{ env.REGISTRY }}/${{ inputs.image-tag }}
 
       - name: Wait for container to start
         run: |
