--- a/decibelio_app_web/pubspec.yaml
+++ b/decibelio_app_web/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   google_fonts: ^6.2.1
   fl_chart: ^0.69.0
   geolocator: ^9.0.2
+  intl: ^0.17.0
 
 dev_dependencies:
   build_runner: ^2.4.0
