--- a/decibelio-deploy/docker-compose.yml
+++ b/decibelio-deploy/docker-compose.yml
@@ -83,6 +83,7 @@ services:
       image: nginx:stable-alpine
       volumes:
         - decibelio-web-bind:/usr/share/nginx/html:ro
+        - ../decibelio_app_web/nginx.conf:/etc/nginx/nginx.conf:ro
       ports:
         - 9000:80 
       
