--- a/decibelio_app_web/nginx.conf
+++ b/decibelio_app_web/nginx.conf
@@ -3,27 +3,41 @@ events {
 }
 
 http {
+    include       mime.types;
+    default_type  application/octet-stream;
+
     server {
         listen 80;
-        server_name localhost;
+        server_name computacion.unl.edu.ec;
 
         root /usr/share/nginx/html;
         index index.html;
 
+        # Proxy inverso al contenedor en el puerto 9000
         location / {
-            try_files $uri /index.html;
+            proxy_pass http://127.0.0.1:9000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
 
+        # Servir archivos estáticos correctamente
+        location ~* \.(?:ico|css|js|gif|jpe?g|png|woff2?|eot|ttf|svg|json)$ {
+            root /usr/share/nginx/html;
+            expires 6M;
+            access_log off;
+            add_header Cache-Control "public";
+            add_header Access-Control-Allow-Origin *;
+        }
+
+        # Manejo del manifest.json
         location /manifest.json {
+            root /usr/share/nginx/html;
             add_header Access-Control-Allow-Origin *;
             try_files $uri =404;
         }
 
-        location /static/ {
-            expires 30d;
-            add_header Cache-Control "public, max-age=2592000";
-        }
-
+        # Redirigir errores 404 a la página principal
         error_page 404 /index.html;
     }
 }
