--- a/decibelio_app_web/nginx.conf
+++ b/decibelio_app_web/nginx.conf
@@ -10,6 +10,10 @@ http {
         root /usr/share/nginx/html;
         index index.html;
 
+        location /decibelio/ {
+            try_files $uri /index.html;
+        }
+        
         location / {
             try_files $uri /index.html;
         }
