--- a/decibelio-deploy/docker-compose.yml
+++ b/decibelio-deploy/docker-compose.yml
@@ -68,7 +68,7 @@ services:
       image: nginx:stable-alpine
       volumes:
         - decibelio-web-bind:/usr/share/nginx/html:ro
-        - decibelio-web-config-bind:/etc/nginx/nginx.conf:ro
+        - ../decibelio_app_web/nginx.conf:/etc/nginx/nginx.conf:ro
       ports:
         - 80:80 
       
@@ -109,8 +109,7 @@ volumes:
       type: none
       device: ../decibelio_app_web/build/web
       o: bind
-  decibelio-web-config-bind:
-    name: decibelio-web-config-bind
+  decibelio-web-nginx_config:
     driver: local
     driver_opts:
       type: none
