--- a/decibelio_app_web/nginx.conf
+++ b/decibelio_app_web/nginx.conf
@@ -1,59 +1,35 @@
-events {
-    worker_connections 1024;
-}
+server {
+    listen 80;
+    server_name computacion.unl.edu.ec;
 
-http {
-    server {
-        listen 80;
-        server_name localhost;
+    root /usr/share/nginx/html;
+    index index.html;
 
-        root /usr/share/nginx/html;
-        index index.html;
-
-        # Configuración para aplicaciones tipo SPA (React, Angular, Flutter Web)
-        location /decibelio/ {
-            root /usr/share/nginx/html;
-            index index.html;
-            try_files $uri /index.html;
-        }
-
-        location / {
-            root /usr/share/nginx/html;
-            index index.html;
-            try_files $uri /index.html;
-        }
-
-        # Corrección para manifest.json
-        location /manifest.json {
-            root /usr/share/nginx/html;
-            add_header Access-Control-Allow-Origin *;
-            try_files $uri =404;
-        }
-
-        # Corrección para archivos estáticos
-        location /static/ {
-            root /usr/share/nginx/html;
-            expires 30d;
-            add_header Cache-Control "public, max-age=2592000";
-        }
-
-        # Corrección para Flutter Web (asegura que sirva correctamente los assets)
-        location /assets/ {
-            root /usr/share/nginx/html;
-            expires 30d;
-            add_header Cache-Control "public, max-age=2592000";
-        }
-
-        # Sirve archivos JS y CSS correctamente con el MIME type adecuado
-        location ~* \.(?:ico|css|js|gif|jpe?g|png|woff2?|eot|ttf|svg|otf|mp4|webm|ogv|json|wasm)$ {
-            root /usr/share/nginx/html;
-            expires 6M;
-            access_log off;
-            add_header Cache-Control "public, max-age=15552000";
-            try_files $uri =404;
-        }
-
-        # Manejador de errores 404
-        error_page 404 /index.html;
+    location / {
+        try_files $uri /index.html;
     }
+
+    location /flutter_bootstrap.js {
+        add_header Content-Type application/javascript;
+        try_files $uri =404;
+    }
+
+    location /manifest.json {
+        add_header Content-Type application/json;
+        add_header Access-Control-Allow-Origin *;
+        try_files $uri =404;
+    }
+
+    location /favicon.png {
+        try_files $uri =404;
+    }
+
+    location ~* \.(?:js|css|png|jpg|jpeg|gif|ico|woff2?|eot|ttf|svg|otf|wasm|json)$ {
+        expires 6M;
+        access_log off;
+        add_header Cache-Control "public, max-age=15552000";
+        try_files $uri =404;
+    }
+
+    error_page 404 /index.html;
 }
