--- a/decibelio_app_web/nginx.conf
+++ b/decibelio_app_web/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name computacion.unl.edu.ec;
+    server_name computacion.unl.edu.ec/decibelio;
 
     root /usr/share/nginx/html;
     index index.html;
