--- a/decibelio_app_web/nginx.conf
+++ b/decibelio_app_web/nginx.conf
@@ -1,6 +1,7 @@
 http {
-    # Otros bloques de configuración globales pueden ir aquí
-
+   
+    events { }
+    
     server {
         listen 80 default_server;
         listen [::]:80 default_server;
