--- a/decibelio_app_web/nginx.conf
+++ b/decibelio_app_web/nginx.conf
@@ -2,15 +2,17 @@ events { }
 http {
 
     server {
-        listen 80 default_server;
-        listen [::]:80 default_server;
-        #server_name computacion.unl.edu.ec/decibelio;
+        listen 80;
+
+        #listen [::]:80 default_server;
+        server_name computacion.unl.edu.ec/decibelio;
 
         root /usr/share/nginx/html;
         index index.html;
 
         location / {
-            try_files $uri /index.html;
+            #try_files $uri /index.html;
+            try_files $uri =404;
         }
 
         location /flutter_bootstrap.js {
