--- a/decibelio_app_web/nginx.conf
+++ b/decibelio_app_web/nginx.conf
@@ -1,44 +1,39 @@
 events { }
 http {
 
-    server {
-        listen 80;
+   server {
+    listen 80;
+    server_name computacion.unl.edu.ec;
 
-        #listen [::]:80 default_server;
-        server_name computacion.unl.edu.ec/decibelio;
+    root /usr/share/nginx/html;
+    index index.html;
 
-        root /usr/share/nginx/html;
-        index index.html;
-
-        location / {
-            #try_files $uri /index.html;
-            try_files $uri =404;
-        }
-
-        location /flutter_bootstrap.js {
-            add_header Content-Type application/javascript;
-            try_files $uri =404;
-        }
-
-        location /manifest.json {
-            add_header Content-Type application/json;
-            add_header Access-Control-Allow-Origin *;
-            try_files $uri =404;
-        }
-
-        location /favicon.png {
-            try_files $uri =404;
-        }
-
-        location ~* \.(?:js|css|png|jpg|jpeg|gif|ico|woff2?|eot|ttf|svg|otf|wasm|json)$ {
-            expires 6M;
-            access_log off;
-            add_header Cache-Control "public, max-age=15552000";
-            try_files $uri =404;
-        }
-
-        error_page 404 /index.html;
+    location /decibelio/ {
+        try_files $uri $uri/ /decibelio/index.html;
     }
 
-    # Otros bloques de configuración globales pueden ir aquí
+    location /decibelio/flutter_bootstrap.js {
+        add_header Content-Type application/javascript;
+        try_files $uri =404;
+    }
+
+    location /decibelio/manifest.json {
+        add_header Content-Type application/json;
+        add_header Access-Control-Allow-Origin *;
+        try_files $uri =404;
+    }
+
+    location /decibelio/favicon.png {
+        try_files $uri =404;
+    }
+
+    location ~* \.(?:js|css|png|jpg|jpeg|gif|ico|woff2?|eot|ttf|svg|otf|wasm|json)$ {
+        expires 6M;
+        access_log off;
+        add_header Cache-Control "public, max-age=15552000";
+        try_files $uri =404;
+    }
+
+    error_page 404 /decibelio/index.html;
+}
 }
