--- a/decibelio_app_web/nginx.conf
+++ b/decibelio_app_web/nginx.conf
@@ -1,39 +1,43 @@
 events { }
 http {
 
-   server {
-    listen 80;
-    server_name computacion.unl.edu.ec;
+    server {
+        listen 80;
+        server_name computacion.unl.edu.ec;
 
-    root /usr/share/nginx/html;
-    index index.html;
+        root /usr/share/nginx/html;
+        index index.html;
 
-    location /decibelio/ {
-        try_files $uri $uri/ /decibelio/index.html;
+        # Ajuste para servir el subdirectorio /decibelio/
+        location /decibelio/ {
+            try_files $uri $uri/ /decibelio/index.html;
+        }
+
+        # Asegúrate de que los archivos estáticos sean accesibles
+        location /decibelio/flutter_bootstrap.js {
+            add_header Content-Type application/javascript;
+            try_files $uri =404;
+        }
+
+        location /decibelio/manifest.json {
+            add_header Content-Type application/json;
+            add_header Access-Control-Allow-Origin *;
+            try_files $uri =404;
+        }
+
+        location /decibelio/favicon.png {
+            try_files $uri =404;
+        }
+
+        # Asegúrate de que otros archivos estáticos como .js, .css, .png, etc., estén configurados
+        location ~* \.(?:js|css|png|jpg|jpeg|gif|ico|woff2?|eot|ttf|svg|otf|wasm|json)$ {
+            expires 6M;
+            access_log off;
+            add_header Cache-Control "public, max-age=15552000";
+            try_files $uri =404;
+        }
+
+        # Redirige los errores 404 a index.html
+        error_page 404 /decibelio/index.html;
     }
-
-    location /decibelio/flutter_bootstrap.js {
-        add_header Content-Type application/javascript;
-        try_files $uri =404;
-    }
-
-    location /decibelio/manifest.json {
-        add_header Content-Type application/json;
-        add_header Access-Control-Allow-Origin *;
-        try_files $uri =404;
-    }
-
-    location /decibelio/favicon.png {
-        try_files $uri =404;
-    }
-
-    location ~* \.(?:js|css|png|jpg|jpeg|gif|ico|woff2?|eot|ttf|svg|otf|wasm|json)$ {
-        expires 6M;
-        access_log off;
-        add_header Cache-Control "public, max-age=15552000";
-        try_files $uri =404;
-    }
-
-    error_page 404 /decibelio/index.html;
-}
 }
