--- a/decibelio_app_web/nginx.conf
+++ b/decibelio_app_web/nginx.conf
@@ -37,7 +37,16 @@ http {
             try_files $uri =404;
         }
 
+        location /decibelio/api/ {
+            proxy_pass http://decibelio-api:9080/decibelio/api/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
         # Redirige los errores 404 a index.html
         error_page 404 /decibelio/index.html;
     }
+
 }
