--- a/decibelio_app_web/nginx.conf
+++ b/decibelio_app_web/nginx.conf
@@ -1,5 +1,8 @@
 events { }
 http {
+    upstream decibelio_api_server {
+        server decibelio-api:9080;
+    }
 
     server {
         listen 80;
@@ -37,13 +40,21 @@ http {
             try_files $uri =404;
         }
 
-        location /decibelio/api/ {
-            proxy_pass http://decibelio-api:9080/decibelio/api/;
+        location /decibelio {
+            proxy_pass http://decibelio_api_server/decibelio;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
+
+        #location /decibelio/api/ {
+         #   proxy_pass http://localhost:9080/decibelio/api/;
+          #  proxy_set_header Host $host;
+           # proxy_set_header X-Real-IP $remote_addr;
+            #proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            #proxy_set_header X-Forwarded-Proto $scheme;
+        #}
 
         # Redirige los errores 404 a index.html
         error_page 404 /decibelio/index.html;
