--- a/decibelio_app_web/nginx.conf
+++ b/decibelio_app_web/nginx.conf
@@ -1,7 +1,7 @@
 events { }
 http {
     upstream decibelio_api_server {
-        server decibelio-api:9080;
+        server decibelio-api:9080/decibelio;
     }
 
     server {
@@ -40,7 +40,7 @@ http {
             try_files $uri =404;
         }
 
-        location /decibelio/api/ {
+        location /api/ {
             proxy_pass http://decibelio_api_server/decibelio;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
