--- a/decibelio_app_web/nginx.conf
+++ b/decibelio_app_web/nginx.conf
@@ -40,7 +40,7 @@ http {
             try_files $uri =404;
         }
 
-        location /api/ {
+        location /decibelio/server/ {
             proxy_pass http://decibelio_api_server/decibelio;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
