--- a/decibelio_app_web/nginx.conf
+++ b/decibelio_app_web/nginx.conf
@@ -37,8 +37,8 @@ http {
             try_files $uri =404;
         }
 
-        location /decibelio/server/ {
-           proxy_pass http://decibelio-api:9080/;
+        location /decibelio/openapi/ {
+           proxy_pass http://decibelio-api:9080/openapi/ui/;
           #  proxy_set_header Host $host;
            # proxy_set_header X-Real-IP $remote_addr;
             #proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
