--- a/decibelio_app_web/nginx.conf
+++ b/decibelio_app_web/nginx.conf
@@ -39,10 +39,10 @@ http {
 
         location /decibelio/openapi/ {
            proxy_pass http://172.21.0.2:9080/openapi/ui/;
-          #  proxy_set_header Host $host;
-           # proxy_set_header X-Real-IP $remote_addr;
-            #proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            #proxy_set_header X-Forwarded-Proto $scheme;
+           proxy_set_header Host $host;
+           proxy_set_header X-Real-IP $remote_addr;
+           proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+           proxy_set_header X-Forwarded-Proto $scheme;
         }
 
         # Redirige los errores 404 a index.html
