--- a/decibelio_app_web/nginx.conf
+++ b/decibelio_app_web/nginx.conf
@@ -37,7 +37,7 @@ http {
             try_files $uri =404;
         }
 
-        location /decibelio/openapi/ {
+        location /openapi/ {
            proxy_pass http://172.21.0.2:9080/openapi/ui/;
            proxy_set_header Host $host;
            proxy_set_header X-Real-IP $remote_addr;
