--- a/decibelio_app_web/nginx.conf
+++ b/decibelio_app_web/nginx.conf
@@ -37,13 +37,15 @@ http {
             try_files $uri =404;
         }
 
-        location /openapi/ {
-           proxy_pass http://172.21.0.2:9080/decibelio/api/;
-           proxy_set_header Host $host;
-           proxy_set_header X-Real-IP $remote_addr;
-           proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-           proxy_set_header X-Forwarded-Proto $scheme;
-        }
+       location ~ ^/openapi/([^/]+)/ {
+        set $subdir $1;
+        proxy_pass http://172.21.0.2:9080/decibelio/api/$subdir/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
 
         # Redirige los errores 404 a index.html
         error_page 404 /decibelio/index.html;
