--- a/decibelio_app_web/nginx.conf
+++ b/decibelio_app_web/nginx.conf
@@ -36,16 +36,26 @@ http {
             add_header Cache-Control "public, max-age=15552000";
             try_files $uri =404;
         }
+        
+        location /decibelio/api/ {
+            rewrite ^/decibelio/api/(.*)$ /$1 break;
+            proxy_pass http://192.168.50.161:9080/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
 
-       location ~ ^/openapi/([^/]+)/ {
-        set $subdir $1;
-        proxy_pass http://172.21.0.2:9080/decibelio/api/$subdir/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
+            # Permitir CORS si es necesario
+            add_header Access-Control-Allow-Origin *;
+            add_header Access-Control-Allow-Methods "GET, POST, OPTIONS";
+            add_header Access-Control-Allow-Headers "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range";
+            add_header Access-Control-Expose-Headers "Content-Length,Content-Range";
 
+            # Manejo de preflight requests de CORS
+            if ($request_method = OPTIONS) {
+                return 204;
+            }
+        }
 
         # Redirige los errores 404 a index.html
         error_page 404 /decibelio/index.html;
