--- a/decibelio_app_web/nginx.conf
+++ b/decibelio_app_web/nginx.conf
@@ -36,16 +36,20 @@ http {
             add_header Cache-Control "public, max-age=15552000";
             try_files $uri =404;
         }
-        
+
+        # Configurar proxy para la API en /decibelio/api/
         location /decibelio/api/ {
-            rewrite ^/decibelio/api/(.*)$ /$1 break;
             proxy_pass http://192.168.50.161:9080/;
+            proxy_redirect off;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
 
-            # Permitir CORS si es necesario
+            # Evitar que las solicitudes a la API sean interpretadas como archivos estáticos
+            rewrite ^/decibelio/api(/.*)$ $1 break;
+
+            # Manejo de CORS si es necesario
             add_header Access-Control-Allow-Origin *;
             add_header Access-Control-Allow-Methods "GET, POST, OPTIONS";
             add_header Access-Control-Allow-Headers "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range";
