--- a/decibelio_app_web/nginx.conf
+++ b/decibelio_app_web/nginx.conf
@@ -39,7 +39,7 @@ http {
 
         # Configurar proxy para la API en /decibelio/api/
         location /decibelio/api/ {
-            proxy_pass http://192.168.50.161:9080/decibelio/api/;
+            proxy_pass http://decibelio-api-container:9080;
             proxy_redirect off;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
