--- a/decibelio_app_web/nginx.conf
+++ b/decibelio_app_web/nginx.conf
@@ -37,17 +37,17 @@ http {
             try_files $uri =404;
         }
 
-        # Configurar proxy para la API en /decibelio/api/
         location /decibelio/api/ {
-            proxy_pass http://decibelio-api-container:9080;
+            # Reescribir la URL para eliminar "/decibelio" y redirigir a la API correctamente
+            rewrite ^/decibelio/api(/.*)$ $1 break;
+
+            # Redirigir al contenedor de la API, usando la IP interna o el nombre del contenedor
+            proxy_pass http://172.21.0.2:9080;  # Usamos la IP interna de decibelio-api-container
             proxy_redirect off;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-
-            # Evitar que las solicitudes a la API sean interpretadas como archivos estáticos
-            rewrite ^/decibelio/api(/.*)$ $1 break;
 
             # Manejo de CORS si es necesario
             add_header Access-Control-Allow-Origin *;
@@ -60,7 +60,7 @@ http {
                 return 204;
             }
         }
-
+        
         # Redirige los errores 404 a index.html
         error_page 404 /decibelio/index.html;
     }
