--- a/decibelio_app_web/nginx.conf
+++ b/decibelio_app_web/nginx.conf
@@ -37,30 +37,16 @@ http {
             try_files $uri =404;
         }
 
-        location /decibelio/api/ {
-            # Reescribir la URL para eliminar "/decibelio" y redirigir a la API correctamente
-            rewrite ^/decibelio/api(/.*)$ $1 break;
+location /decibelio/api/ {
+    proxy_pass http://decibelio-api-container:9080;  # Usamos el nombre del contenedor
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_redirect off;
+}
 
-            # Redirigir al contenedor de la API, usando la IP interna o el nombre del contenedor
-            proxy_pass http://172.21.0.2:9080;  # Usamos la IP interna de decibelio-api-container
-            proxy_redirect off;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
 
-            # Manejo de CORS si es necesario
-            add_header Access-Control-Allow-Origin *;
-            add_header Access-Control-Allow-Methods "GET, POST, OPTIONS";
-            add_header Access-Control-Allow-Headers "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range";
-            add_header Access-Control-Expose-Headers "Content-Length,Content-Range";
-
-            # Manejo de preflight requests de CORS
-            if ($request_method = OPTIONS) {
-                return 204;
-            }
-        }
-        
         # Redirige los errores 404 a index.html
         error_page 404 /decibelio/index.html;
     }
