--- a/decibelio_app_web/nginx.conf
+++ b/decibelio_app_web/nginx.conf
@@ -37,14 +37,14 @@ http {
             try_files $uri =404;
         }
 
-location /decibelio/api/ {
-    proxy_pass http://decibelio-api-container:9080;  # Usamos el nombre del contenedor
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
-    proxy_redirect off;
-}
+       location ~ ^/openapi/([^/]+)/ {
+        set $subdir $1;
+        proxy_pass http://172.21.0.2:9080/decibelio/api/$subdir/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
 
 
         # Redirige los errores 404 a index.html
