--- a/decibelio_app_web/nginx.conf
+++ b/decibelio_app_web/nginx.conf
@@ -39,7 +39,7 @@ http {
 
        location ~ ^/openapi/([^/]+)/ {
         set $subdir $1;
-        proxy_pass http://172.21.0.2:9080/decibelio/api/$subdir/;
+        proxy_pass http://decibelio-api:9080/decibelio/api/$subdir/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
