--- a/decibelio_app_web/nginx.conf
+++ b/decibelio_app_web/nginx.conf
@@ -37,7 +37,7 @@ http {
             try_files $uri =404;
         }
 
-       location ~ ^/openapi/([^/]+)/ {
+       location /openapi/([^/]+)/ {
         set $subdir $1;
         proxy_pass http://172.21.0.2:9080/decibelio/api/$subdir/;
         proxy_set_header Host $host;
