--- a/decibelio_app_web/nginx.conf
+++ b/decibelio_app_web/nginx.conf
@@ -37,9 +37,8 @@ http {
             try_files $uri =404;
         }
 
-       location /openapi/([^/]+)/ {
-        set $subdir $1;
-        proxy_pass http://172.21.0.2:9080/decibelio/api/$subdir/;
+    location /openapi/ {
+           proxy_pass http://172.21.0.2:9080/decibelio/api/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
