--- a/decibelio_app_web/nginx.conf
+++ b/decibelio_app_web/nginx.conf
@@ -8,12 +8,10 @@ http {
         root /usr/share/nginx/html;
         index index.html;
 
-        # Ajuste para servir el subdirectorio /decibelio/
         location /decibelio/ {
             try_files $uri $uri/ /decibelio/index.html;
         }
 
-        # Asegúrate de que los archivos estáticos sean accesibles
         location /decibelio/flutter_bootstrap.js {
             add_header Content-Type application/javascript;
             try_files $uri =404;
@@ -29,7 +27,6 @@ http {
             try_files $uri =404;
         }
 
-        # Asegúrate de que otros archivos estáticos como .js, .css, .png, etc., estén configurados
         location ~* \.(?:js|css|png|jpg|jpeg|gif|ico|woff2?|eot|ttf|svg|otf|wasm|json)$ {
             expires 6M;
             access_log off;
@@ -37,16 +34,14 @@ http {
             try_files $uri =404;
         }
 
-    location /openapi/ {
-           proxy_pass http://172.21.0.2:9080/decibelio/api/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
+        location /api/ {
+            proxy_pass http://172.21.0.2:9080/decibelio/api/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
 
-
-        # Redirige los errores 404 a index.html
         error_page 404 /decibelio/index.html;
     }
 
