Update: Modify docker-compose.yml to configure decibelio-db and decibelio-api services

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,7 +52,7 @@ jobs:
       - name: Configurar Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.24.3'
+          flutter-version: '3.27.4'
           channel: 'stable'
           cache: true
 
@@ -92,18 +92,21 @@ jobs:
         with:
           junit_files: "decibelio_app_web/test-results/**/*.xml"
 
+      # Subir binarios de la aplicación
       - name: Subir binarios de la aplicación
         uses: actions/upload-artifact@v4
         with:
           name: Application-Binary
           path: decibelio/target/*.war
 
+      # Subir resultados de pruebas de Maven
       - name: Subir resultados de pruebas de Maven
         uses: actions/upload-artifact@v4
         with:
           name: Maven-Test-Results
           path: decibelio/test-results
 
+      # Subir resultados de pruebas de Flutter
       - name: Subir resultados de pruebas de Flutter
         uses: actions/upload-artifact@v4
         with:
