--- a/decibelio-deploy/docker-compose.yml
+++ b/decibelio-deploy/docker-compose.yml
@@ -12,24 +12,15 @@ services:
       - ${DB_PORT_PUBLIC}:5432
     volumes:
       - decibelio-db-data:/var/lib/postgresql/data
-      #- ./init_db/init.sql:/docker-entrypoint-initdb.d/init.sql
-    #net: ${NETWORK}
     networks:
-      decibelio-network:
-        ipv4_address: 172.21.0.252
+      - decibelio-network
     healthcheck:
       test: [ "CMD-SHELL", "pg_isready -d $${POSTGRES_DB} -U $${POSTGRES_USER}" ]
       interval: 5s
       timeout: 5s
       retries: 10
-
-#  adminer-bd:
-#    image: adminer
-#    container_name: decibelio-adminer-bd-container
-#    restart: unless-stopped
-#    restart: always
-#    ports:
-#      - 8080:8080
+    deploy:
+      replicas: 2 # Aumentar a 2 réplicas
 
   decibelio-api:
     build:
@@ -52,44 +43,36 @@ services:
     deploy:
       resources:
         limits:
-          #cpus: '0.50'
           memory: 1024M
         reservations:
-          #cpus: '0.25'
           memory: 512M
       replicas: 2
     networks:
-      decibelio-network:
-        ipv4_address: 172.21.0.2
+      - decibelio-network
 
   decibelio-webapp:
-      image: nginx:stable-alpine
-      restart: unless-stopped
-      volumes:
-        - decibelio-web-bind:/usr/share/nginx/html:ro
-        - ../decibelio_app_web/nginx.conf:/etc/nginx/nginx.conf:ro
-      ports:
-        - 80:80 
-      
-      depends_on:
-        - decibelio-api
-      deploy:
-          resources:
-              limits:
-                  memory: 1024M
-              reservations:
-                  memory: 512M
-      networks:
-        decibelio-network:
-          ipv4_address: 172.21.0.3
+    image: nginx:stable-alpine
+    restart: unless-stopped
+    volumes:
+      - decibelio-web-bind:/usr/share/nginx/html:ro
+      - ../decibelio_app_web/nginx.conf:/etc/nginx/nginx.conf:ro
+    ports:
+      - 80:80
+    depends_on:
+      - decibelio-api
+    deploy:
+      resources:
+        limits:
+          memory: 1024M
+        reservations:
+          memory: 512M
+      replicas: 2
+    networks:
+      - decibelio-network
 
 networks:
   decibelio-network:
     driver: bridge
-    ipam:
-      driver: default
-      config:
-        - subnet: 172.21.0.0/24
 
 volumes:
   decibelio-db-data:
