--- a/decibelio_app_web/nginx.conf
+++ b/decibelio_app_web/nginx.conf
@@ -35,7 +35,7 @@ http {
         }
 
         location /api/ {
-            proxy_pass http://172.21.0.2:9080/decibelio/api/;
+            proxy_pass http://decibelio-api:9080/decibelio/api/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
