--- a/decibelio_app_web/pubspec.yaml
+++ b/decibelio_app_web/pubspec.yaml
@@ -39,7 +39,11 @@ dependencies:
   fl_chart: ^0.70.2
   geolocator: ^9.0.2
   intl: ^0.17.0
+  http: ^1.3.0
 
+  bloc: any
+  latlong2: any
+  flutter_dotenv: ^5.2.1
 dev_dependencies:
   build_runner: ^2.4.0
   build_web_compilers: ^4.0.4
@@ -66,6 +70,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+     - .env
      - assets/icons/
      - assets/images/
      - assets/logos/
