--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -24,7 +24,7 @@ jobs:
         steps:
         - uses: actions/checkout@v3
         - name: Download application binary
-          uses: actions/download-artifact@v3.0.0
+          uses: actions/download-artifact@v4
           with:
             name: Application-Binary
             path: target
@@ -56,7 +56,7 @@ jobs:
           uses: docker/build-push-action@v3.2.0
           with:
             context: ./decibelio
-            dockerfile: ./decibelio/Dockerfile
+            file: ./decibelio/Dockerfile
             push: true
             tags: ${{ steps.meta.outputs.tags }}
             labels: ${{ steps.meta.outputs.labels }}
